--- a/atividade 05/index.html
+++ b/atividade 05/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Locadora 2000</title>
 
-    <!-- ? Fav Icon -->
+    
     <link rel="icon" type="image/png" href="img/icon.png" />
-    <!-- ? Arquivo CSS -->
+
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -20,8 +20,8 @@
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"
-    ></script>
+        crossorigin="anonymous"></script>
+        <script src="script.js"></script>
     </head>
     <body>
     <nav class="navbar navbar-expand-lg bg-light">
@@ -64,6 +64,7 @@
         </div>
         </div>
     </nav>
+
     <h1 class="display-1 text-center mb-5 mt-3">Locadora 2000</h1>
 
     <div class="container">
@@ -81,7 +82,7 @@
         </thead>
         <tbody>
             <tr>
-            <th class="text-center table-primary" colspan="7" id="#gacao">
+            <th class="text-center table-primary" colspan="7" id="gacao">
                 Ação
             </th>
             </tr>
@@ -104,7 +105,7 @@
             <td scope="col">7,4</td>
             </tr>
             <tr>
-            <th class="text-center table-primary" colspan="7" id="#ganim">
+            <th class="text-center table-primary" colspan="7" id="ganim">
                 Animação
             </th>
             </tr>
@@ -127,7 +128,7 @@
             <td scope="col">7,4</td>
         </tr>
         <tr>
-            <th class="text-center table-primary" colspan="7" id="#gacao">
+            <th class="text-center table-primary" colspan="7" id="groman">
                 Romance
             </th>
             <tr>
@@ -149,7 +150,7 @@
                 <td scope="col">5,9</td>
             </tr>  
             <tr>
-            <th class="text-center table-primary" colspan="7" id="#ganim">
+            <th class="text-center table-primary" colspan="7" id="gsus">
                 Suspense
             </th>
             </tr>
@@ -171,7 +172,8 @@
                     <td scope="col">Suspense</td>
                     <td scope="col">Elisabeth Moss</td>
                     <td scope="col">7,1</td>
-                    </tr>     
+                    </tr>
+                    <tr id="insertRow"></tr>     
             </tbody>
         </table>
     </div>
@@ -180,30 +182,30 @@
         <hr class="border-primary border-3 opacity-75"/>
     </div>
 
-    <div class="container mb-5">
+    <div class="container mb-5" id="cadfilmes">
         <h2 class="text-center mb-4">Cadastro de Filmes</h2>
 
-        <form>
+        <form name="register" onsubmit="event.preventDefault()">
             <div class="row">
                 <div class="mb-3 col">
                     <label for="codFilm" class="form-label">Código</label>
-                    <input type="text" class="form-control" id="codFilm"/>
+                    <input type="text" class="form-control" id="codFilm" name="cod"/>
                 </div>
 
                 <div class="mb-3 col">
                     <label for="titleFilm" class="form-label">Titulo</label>
-                    <input type="text" class="form-control" id="titleFilm" />
+                    <input type="text" class="form-control" id="titleFilm" name="title" />
                 </div>
             </div>
 
             <div class="row">
                 <div class="mb-3 col">
                 <label for="directorFilm" class="form-label">Diretor</label>
-                <input type="text" class="form-control" id="directorFilm">
+                <input type="text" class="form-control" id="directorFilm" name="director"/>
                 </div>
                 <div class="mb-3 col">
                     <label for="yearFilm" class="form-label">Lançamento</label>
-                    <input type="text" class="form-control" id="yearFilm" placeholder="DD de MM de AA"/>
+                    <input type="text" class="form-control" id="yearFilm" placeholder="DD de MM de AA" name="date"/>
 
                 </div>
             </div>
@@ -240,8 +242,12 @@
             </div>
 
             <div class="col-auto d-flex justify-content-center">
-                <button type="submit" class="btn btn-primary mt-3">Cadastrar</button>
-            </div>
+                <button type="submit" 
+                onclick="validationForm(); insert()"
+                class="btn btn-primary mt-3">
+            Cadastrar
+        </button>
+        </div>
         </form>
     </div>
     </body>
